fix: a11y: adjusts heading order on myspace page (#1034)
* refactors guardian ideal component to utilize header elements better. adds h3 invisible to typical users to match other components in structure list, and converts h1 to h4 to make the heading order match other components

* converts got feedback heading to an h2 to align with the heading level of other elements on the myspace page

* updates test to match component syntax

---------

--- a/src/components/GuardianIdeal/GuardianIdealItem.module.scss
+++ b/src/components/GuardianIdeal/GuardianIdealItem.module.scss
@@ -52,8 +52,12 @@
   }
 
   .guardianIdealTitle {
-    margin-bottom: 0;
-    margin-top: 0;
+    font-size: 40px;
+    color: white;
+    line-height: 1.1;
+    font-family: $sfds-heading-font;
+    margin-bottom: units(1);
+    margin-top: units(2);
   }
 
   .guardianIdealBody {
